--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -1,12 +1,101 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>信息系统-子页面</title>
+    <!-- 引入Bootstrap CSS文件 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
-数据展示<br>
-<a href="/">back to home</a>
-<button onclick="">导入数据</button>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-labelledby="navbarNav">
+    <div class="container">
+        <a class="navbar-brand" href="/">信息系统</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/">首页</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin" target="_blank">管理员界面</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/data_demo">数据展示</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/polls">功能三</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container-content">
+
+    <div class="row mt-3">
+        <div class="col-md-12">
+            <button class="btn btn-primary mb-3">导入数据</button>
+            <br>
+            <p align="center">
+
+                数据展示表demo
+            </p>
+            <table class="table table-striped">
+                <caption>data demo</caption>
+                <thead>
+                <tr>
+                    <th scope="col">列1</th>
+                    <th scope="col">列2</th>
+                    <th scope="col">列3</th>
+                    <th scope="col">列4</th>
+                    <th scope="col">列5</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>数据1</td>
+                    <td>数据2</td>
+                    <td>数据3</td>
+                    <td>数据4</td>
+                    <td>数据5</td>
+                </tr>
+                <tr>
+                    <td>数据1</td>
+                    <td>数据2</td>
+                    <td>数据3</td>
+                    <td>数据4</td>
+                    <td>数据5</td>
+                </tr>
+                <tr>
+                    <td>数据1</td>
+                    <td>数据2</td>
+                    <td>数据3</td>
+                    <td>数据4</td>
+                    <td>数据5</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<footer class="bg-primary text-white text-center py-3 mt-4">
+    <p>版权所有 &copy; 2023 信息系统</p>
+</footer>
+
+
+<!-- 引入Bootstrap JS文件和其依赖项 -->
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
