更新前端页面
修改
- 前端页面组件边距

--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -88,7 +88,7 @@
 </div>
 
 
-<footer class="bg-primary text-white text-center py-3 mt-4">
+<footer class="this-footer bg-primary text-white text-center py-3 ">
     <p>版权所有 &copy; 2023 信息系统</p>
 </footer>
 
