--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,39 +1,42 @@
-        html, body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 
-        header {
-            margin-top: 0;
-            margin-bottom: 0;
-        }
+}
 
-        hr {
-            margin-top: 0;
-            margin-bottom: 0;
-            border: none;
-            border-top: 1px solid #505050;
-        }
-.container-content{
-    margin-left:  0;
+
+header {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.container-content {
+    margin-left: 0;
     margin-right: 0;
     /*{#padding-left:0 ;#}*/
     /*{#padding-right: 0;#}*/
     /*{#max-width: 100%;#}*/
     /*{#max-height: 100%;#}*/
-    height: 82%;
+    height: 86%;
     width: 100%;
+    flex-grow: 1;
 }
-        .this-row {
-            height: 100%;
-        }
 
-        .this-sidebar {
-            margin-left: 0;
-        }
+.this-row {
+    height: 100%;
+}
 
-        .col-right {
-            margin-right: 0;
-        }
+.this-sidebar {
+    margin-left: 0;
+    border-right: 1px solid #bdbdbd;
+}
+
+.col-right {
+    margin-right: 0;
+    padding: 0;
+}
+.this-footer{
+    margin: 0;
+}
