--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,13 @@ header {
     margin-top: 0;
     margin-bottom: 0;
 }
+.sidebar-sticky{
 
+}
+.this-dropdown{
+    height: 16%;
+margin-bottom: 0;
+}
 .container-content {
     margin-left: 0;
     margin-right: 0;
@@ -26,16 +32,19 @@ header {
 
 .this-row {
     height: 100%;
+    width:100%;
 }
 
 .this-sidebar {
     margin-left: 0;
+    display: flex;
     border-right: 1px solid #bdbdbd;
+    height: 100%;
+    flex-grow: 1;
 }
 
 .col-right {
     margin-right: 0;
-    padding: 0;
 }
 .this-footer{
     margin: 0;
