--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -20,7 +20,7 @@
                 'debug': false,
                 'autoWidth': true,
                 "serverSide": true,
-                "searching": true,
+                "searching": false,
                 'paging': true,
                 'lengthChange': false,
                 'info': false,
