--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,8 @@
     <!-- 引入Bootstrap CSS文件 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}">
+
     <!-- 引入Bootstrap JS文件和其依赖项 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
@@ -50,16 +52,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">首页</a>
+                    <a class="nav-link active" href="/">首页</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/admin" target="_blank">管理员界面</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/data_demo">数据展示</a>
+                    <a class="nav-link" href="/datas">数据展示</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/polls">功能三</a>
+                    <a class="nav-link" href="/report">报告展示</a>
                 </li>
             </ul>
         </div>
@@ -71,8 +73,9 @@
     <div class=" col-right ">
         {#             col-md-10  p-0 #}
         <header class="bg-secondary text-white text-center py-3 mb-4">
-            <h1>欢迎来到信息学院信息系统</h1>
+            <h1>区域数字经济发展指数</h1>
             <h2><span id="current-time">当前时间</span></h2> <!-- 添加用于显示实时时间的span元素 -->
+            <h2><span id="">已收录数据 1234567条</span></h2>
         </header>
 
         <div class="container">
@@ -82,10 +85,10 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">政府数据展示</h5>
-                            <p class="card-text text-secondary">功能二的简要描述</p>
+                            <p class="card-text text-secondary">各省政府官网数据展示</p>
                         </div>
                         <div class="card-footer">
-                            <a href="/data_demo" class="btn btn-primary">查看详情</a>
+                            <a href="/datas" class="btn btn-primary">查看详情</a>
                         </div>
                     </div>
                 </div>
@@ -93,10 +96,10 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">微博数据展示</h5>
-                            <p class="card-text text-secondary">功能二的简要描述</p>
+                            <p class="card-text text-secondary">31省官方微博账号关键词数据</p>
                         </div>
                         <div class="card-footer">
-                            <a href="/data_demo" class="btn btn-primary">查看详情</a>
+                            <a href="/datas" class="btn btn-primary">查看详情</a>
                         </div>
                     </div>
                 </div>
@@ -104,18 +107,18 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">头条数据展示</h5>
-                            <p class="card-text text-secondary">功能二的简要描述</p>
+                            <p class="card-text text-secondary">头条新闻数字经济数据</p>
                         </div>
                         <div class="card-footer">
-                            <a href="/data_demo" class="btn btn-primary">查看详情</a>
+                            <a href="/datas" class="btn btn-primary">查看详情</a>
                         </div>
                     </div>
                 </div>
                                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">管理员界面</h5>
-                            <p class="card-text text-secondary">管理员界面的简要描述。</p>
+                            <h5 class="card-title">管理员</h5>
+                            <p class="card-text text-secondary">后台管理员界面</p>
                         </div>
                         <div class="card-footer">
                             <a href="/admin" class="btn btn-primary" target="_blank">查看详情</a>
@@ -126,10 +129,10 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">查看报告</h5>
-                            <p class="card-text text-secondary">功能三的简要描述。</p>
+                            <p class="card-text text-secondary">查看并下载区域数字经济报告</p>
                         </div>
                         <div class="card-footer">
-                            <a href="/polls" class="btn btn-primary">查看详情</a>
+                            <a href="/report" class="btn btn-primary">查看详情</a>
                         </div>
                     </div>
                 </div>
