--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <!-- 引入Bootstrap JS文件和其依赖项 -->
     <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>
-    <script src="{% static 'JavaScript/echarts-wordcloud.min.js' %}"></script>
+    <script src="{% static 'JavaScript/echarts-wordcloud.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
