--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <!-- 引入Bootstrap CSS文件 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'image/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'image/favicon.ico' %}">
 
     <!-- 引入Bootstrap JS文件和其依赖项 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
