--- a/templates/dataDemo.html
+++ b/templates/dataDemo.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'image/favicon.ico' %}">
+
     <!-- 引入Bootstrap JS文件和其依赖项 -->
     <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.3.0/echarts.min.js"></script>
-    <script src="{% static 'JavaScript/echarts-wordcloud.js' %}"></script>
+    <script src="{% static 'JavaScript/wordcloud/echarts-wordcloud.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
@@ -162,8 +164,8 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        {#var cachedData = localStorage.getItem('tableData');#}
-        {#var initialData = cachedData ? JSON.parse(cachedData) : [];#}
+        //var cachedData = localStorage.getItem('tableData');
+        //var initialData = cachedData ? JSON.parse(cachedData) : [];
         let tableConfig = {
             'debug': true,
             'autoWidth': false,
